# named-semaphores

./: Makefile  README.md  pyproject.toml
src/easy_posix_ipc/: semaphore.py
tests/: test_semaphore.py
